-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.8.1
-
None
-
eff776c67 (dev), fd2299083 (6.9), 4d3180b4c (6.8)
Hello,
whenever you find Qt via find_package in cmake with quick, with PROJECT_VERSION set, it wants to find some internal component if Qt with it:
CMake Error at /usr/lib/cmake/Qt6Qml/Qt6QmlFindQmlscInternal.cmake:33 (find_package):
find_package called with invalid argument "1.7.25.r7.gb6aa6a4"
Call Stack (most recent call first):
/usr/lib/cmake/Qt6Qml/Qt6QmlConfig.cmake:153 (include)
/usr/share/cmake/Modules/CMakeFindDependencyMacro.cmake:76 (find_package)
/usr/lib/cmake/Qt6/QtPublicDependencyHelpers.cmake:143 (find_dependency)
/usr/lib/cmake/Qt6Quick/Qt6QuickDependencies.cmake:43 (_qt_internal_find_qt_dependencies)
/usr/lib/cmake/Qt6Quick/Qt6QuickConfig.cmake:53 (include)
/usr/lib/cmake/Qt6/Qt6Config.cmake:191 (find_package)
CMakeLists.txt:110 (find_package)
This file was created in https://github.com/qt/qtdeclarative/commit/b0f1ec4e394dcee82400964225be485a7cdd3c53 so I suspect that it is because of it, but I didn't confirm. In my opinion, Qt's CMake functions shouldn't break when the user's CMake specifies the variable.
For Gerrit Dashboard: QTBUG-132421 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
613568,2 | CMake: Fix find_package call in Qt6QmlFindQmlscInternal.cmake | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
614408,2 | CMake: Fix find_package call in Qt6QmlFindQmlscInternal.cmake | 6.9 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
614440,2 | CMake: Fix find_package call in Qt6QmlFindQmlscInternal.cmake | 6.8 | qt/qtdeclarative | Status: MERGED | +2 | 0 |